# Divider-for-Ai-detector

./: .gitignore  README.md  image_divider.py  requirements.txt  test_divider.py
rust-div/: .gitignore  Cargo.toml
rust-div/examples/: basic_analysis.py
rust-div/src/: adversarial.rs  divider.rs  error.rs  frequency.rs  lib.rs  metadata.rs
src/: cli.py
tests/: test_divider.py
